---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: ????
  Major Features:
    - Added an interface on the combinator for managing (sub-)network masks.
  Changes:
    - Increased default network mask slot setting to 100.
    - Increased max network mask slotting to 500.
  Bugfixes:
    - Combinator will no longer allow the input of invalid signals, some of which crashed the game.
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2023-03-27
  Changes:
    - Combinator will no longer automatically sort signals.
    - The confirm button for editing signal values will now enable immediately upon starting editing.
  Bugfixes:
    - Fix GUI window not having a connection to its entity in some cases.
    - Fix combinator window not closing when its associated entity was mined/destroyed.
    - Fix handling of construction/destruction events causing crashes in some circumstances.
    - Fix an issue with game crash when signal slot was right clicked before editing finished of another slot.
  Info:
    - Improve some setting descriptions.
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 2023-03-26
  Major Features:
    - Initial release